--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
     "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server",
-    "dev": "hexo s",
-    "install": "hexo generate & hexo clean & hexo deploy"
+    "build": "hexo generate",
+    "deploy": "cp -f baidu_verify_*.html public/ & hexo deploy",
+    "dev": "hexo s"
   },
   "hexo": {
     "version": "4.2.0"
