--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://ydvte4.coding-pages.com/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -95,11 +95,24 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-next
 
+baidu_url_submit:
+  count: 10               # 提交最新的多少个链接
+  host: ydvte4.coding-pages.com   # 在百度站长平台中添加的域名
+  token: lAmaGYAHvSfPSgYc      # 秘钥
+  path: baidu_urls.txt   # 文本文档的地址， 新链接会保存在此文本文档里
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: 'git'
+- type: 'git'
   repo:
     github: git@github.com:lanky228/lanky228.github.io.git,master
     coding: git@e.coding.net:liuzhengri/blog.git,master
   branch: 'master'
+- type: baidu_url_submitter
+
+# 自动生成sitemap
+sitemap: 
+  path: sitemap.xml
+baidusitemap: 
+  path: baidusitemap.xml
