--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "hexo clean",
     "build": "hexo generate",
-    "deploy": "cp -f baidu_verify_*.html public/ & hexo deploy",
+    "deploy": "hexo deploy",
     "dev": "hexo s"
   },
   "hexo": {
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-baidu-url-submit": "0.0.6",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
+    "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
